--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 		<logback.version>1.0.6</logback.version>
 		<!-- spring -->
 		<spring.version>4.3.5.RELEASE</spring.version>
+		<mybatis.paginator.version>1.2.17</mybatis.paginator.version>
+		<!-- mybatis -->
+		<mybatis.version>3.4.1</mybatis.version>
+		<mybatis.spring.version>1.3.0</mybatis.spring.version>
 		<!-- aspect -->
 		<aspectj.version>1.8.10</aspectj.version>
 		<cglib.version>3.2.4</cglib.version>
@@ -119,6 +123,24 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		
+		<!-- mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>${mybatis.spring.version}</version>
+		</dependency>
+		<!--pagination -->
+		<dependency>
+			<groupId>com.github.miemiedev</groupId>
+			<artifactId>mybatis-paginator</artifactId>
+			<version>${mybatis.paginator.version}</version>
 		</dependency>
 
 		<!-- datasource -->
